Implement Hero module

--- a/client/app/scss/base/_core.scss
+++ b/client/app/scss/base/_core.scss
@@ -2,7 +2,7 @@
 // 
 body {
     font-family: $font-stack-mark;
-    background: linear-gradient(-224deg, #545073 0%, #353344 100%);
+    background: white;
 }
 
 * {
