--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -19,6 +19,7 @@
 // Layouts
 @import 'layout/footer-root';
 @import 'layout/nav-navigation';
+@import 'layout/hero';
 
 // Modules
 @import 'modules/images';
