--- a/client/app/scss/utilities/_config.scss
+++ b/client/app/scss/utilities/_config.scss
@@ -12,6 +12,7 @@ $blue: #4D5CF9 !default;
 $redorange: RGB(246, 81, 81) !default;
 $razmatazz: RGB(115, 83, 242) !default;
 $halfspanishwhite: RGB(230, 214, 197) !default;
+$graysuit: #91939F !default;
 
 /// Color usage
 $primary-color: $blue;
