--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="index.html">Animal Collective</a>
+                <a href="index.html">The Paw Collective</a>
             </div>
             <ul>
                 <li><a href="#">Animals</a></li>
