--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -121,12 +121,18 @@
 // MAIN
 
 header.main {
-    padding:50px 0;
+    padding:30px 0;
+
+    nav {
+        @include display(flex);
+        @include align-items(center);
+    }
 
     .logo {
         display: inline-block;
         font-size: 1.3em;
-        color:white;
+        font-weight:bolder;
+        color:$graysuit;
         text-transform:uppercase;
 
         img {
@@ -135,15 +141,17 @@ header.main {
     }
 
     ul {
-        float: right;
+        margin-left:auto;
         padding: 10px 0;
+
         li {
             display: inline-block;
-            color:white;
+            color:$graysuit;
             padding-left:30px;
             text-transform:uppercase;
             font-size: 0.9em;
             font-weight:bolder;
+            letter-spacing:0.1em;
         }
     }
 }
