--- a/client/app/scss/utilities/_mixins.scss
+++ b/client/app/scss/utilities/_mixins.scss
@@ -12,6 +12,12 @@
     }
 }
 
+@mixin box-sizing($box-model) {
+  -webkit-box-sizing: $box-model; // Safari <= 5
+     -moz-box-sizing: $box-model; // Firefox <= 19
+          box-sizing: $box-model;
+}
+
 @mixin el($element) {
   &__#{$element} {
     @content;
