Implement filter module

--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -25,6 +25,7 @@
 @import 'modules/images';
 @import 'modules/shared';
 @import 'modules/drop-image-box';
+@import 'modules/filter-box';
 
 // Pages
 @import 'pages/home-page';
