--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,5 +1,9 @@
 // ////= Main Composition Styling
-// //======================================================================//
+// //=============================================================
+
+$map-portifolio: (
+  gutters: 0.1
+);
 
 section.main {
     .container {
@@ -21,12 +25,13 @@ section.main {
                 list-style: none;
                 padding: 0;
             }
-            &--items {
+            @include with-layout($map-portifolio) { 
+                &--items {
                 height: auto;
                 background: white;
                 margin-bottom: gutter(susy-get(columns));
                 position: relative;
-                height: 277px;
+                height: 267px;
 
                 @include gallery(1 of 5);
                 @include breakpoint(md) {
@@ -65,7 +70,7 @@ section.main {
 
                 &---overlay {
                     z-index: 2;
-                    background: rgba(246, 81, 81, 0.73);
+                    background: rgba(0, 0, 0, 0.43);
                     cursor: pointer;
                     opacity: 0;
 
@@ -81,7 +86,7 @@ section.main {
                         padding: 3px 0;
                         color: white;
                         &:first-of-type {
-                            font-size: 1.5em;
+                            font-size: 1.2em;
                             font-weight: bolder;
                             opacity: 0;
                         }
@@ -96,9 +101,30 @@ section.main {
                     background-size: cover;
                     background-position: 50% 50%;
                     border-radius: 3px;
-                    filter: grayscale(40%);
+                    filter: grayscale(50%);
+
+                    &::after {
+                        content: '';
+                        width:100%;
+                        height:100%;
+                        // background:rgba(226,213,206,.20);
+                        position:absolute;
+                    }
                 }
             }
+            }
+            
         }
     }
 }
+
+
+.gallery {
+    ul {
+        @include display(flex);
+        @include flex-wrap(wrap);
+    }
+}
+
+
+
