Add navigation active state colors

--- a/client/app/scss/layout/_hero.scss
+++ b/client/app/scss/layout/_hero.scss
@@ -47,6 +47,7 @@
             letter-spacing: 0.2em;
             line-height: 1.6em;
             text-transform: uppercase;
+            text-align:center;
         }
     }
 }
