--- a/client/app/scss/utilities/_config.scss
+++ b/client/app/scss/utilities/_config.scss
@@ -13,6 +13,7 @@ $redorange: RGB(246, 81, 81) !default;
 $razmatazz: RGB(115, 83, 242) !default;
 $halfspanishwhite: RGB(230, 214, 197) !default;
 $graysuit: #91939F !default;
+$graysuit-active: #604c9f !default;
 
 /// Color usage
 $primary-color: $blue;
