--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,23 +1,17 @@
 // ////= Main Composition Styling
 // //=============================================================
-
-$map-portifolio: (
-  gutters: 0.1
-);
-
+$map-portifolio: ( gutters: 0.1);
 section.main {
     .container {
-
         .main_title {
-            color:#313131;
-            font-weight:lighter;
-            font-size:1.1em;
-            line-height:1.6em;
+            color: #313131;
+            font-weight: lighter;
+            font-size: 1.1em;
+            line-height: 1.6em;
             padding: 20px 0;
             text-align: center;
             text-transform: uppercase;
         }
-
         .gallery_home {
             @include full;
             ul {
@@ -25,99 +19,87 @@ section.main {
                 list-style: none;
                 padding: 0;
             }
-            @include with-layout($map-portifolio) { 
+            @include with-layout($map-portifolio) {
                 &--items {
-                height: auto;
-                background: white;
-                margin-bottom: gutter(susy-get(columns));
-                position: relative;
-                height: 267px;
-
-                @include gallery(1 of 5);
-                @include breakpoint(md) {
-                    @include gallery(4 of 12);
-                }
-                @include breakpoint(sm) {
-                    @include gallery(12 of 12);
-                    float: none;
-                }
-
-                &:hover {
-                    > div:first-child {
-
-                        opacity: 1;
-                        @include transition(opacity 0.1s ease-in);
-
+                    height: auto;
+                    background: white;
+                    margin-bottom: gutter(susy-get(columns));
+                    position: relative;
+                    height: 267px;
+                    @include gallery(1 of 5);
+                    @include breakpoint(md) {
+                        @include gallery(4 of 12);
+                    }
+                    @include breakpoint(sm) {
+                        @include gallery(12 of 12);
+                        float: none;
+                    }
+                    &:hover {
+                        > div:first-child {
+                            opacity: 1;
+                            @include transition(opacity 0.1s ease-in);
+                            p {
+                                &:first-of-type {
+                                    @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp);
+                                    @include animation-delay(0.2s)
+                                }
+                                &:last-of-type {
+                                    @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown);
+                                    @include animation-delay(0.2s)
+                                }
+                            }
+                        }
+                    }
+                    &---overlay,
+                    &---hero {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                    }
+                    &---overlay {
+                        z-index: 2;
+                        background: rgba(0, 0, 0, 0.43);
+                        cursor: pointer;
+                        opacity: 0;
+                        @include transition(opacity 0.5s ease-in-out);
+                        @include display(flex);
+                        @include align-items(center);
+                        @include justify-content(center);
+                        @include flex-direction(row);
                         p {
+                            display: block;
+                            text-align: center;
+                            padding: 3px 0;
+                            color: white;
                             &:first-of-type {
-                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp);
-                                @include animation-delay(0.2s)
+                                font-size: 1.2em;
+                                font-weight: bolder;
+                                opacity: 0;
                             }
                             &:last-of-type {
-                                @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown);
-                                @include animation-delay(0.2s)
+                                opacity: 0;
                             }
                         }
                     }
-                }
-
-                &---overlay,
-                &---hero {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                }
-
-                &---overlay {
-                    z-index: 2;
-                    background: rgba(0, 0, 0, 0.43);
-                    cursor: pointer;
-                    opacity: 0;
-
-                    @include transition(opacity 0.5s ease-in-out);
-                    @include display(flex);
-                    @include align-items(center);
-                    @include justify-content(center);
-                    @include flex-direction(row);
-
-                    p {
-                        display: block;
-                        text-align: center;
-                        padding: 3px 0;
-                        color: white;
-                        &:first-of-type {
-                            font-size: 1.2em;
-                            font-weight: bolder;
-                            opacity: 0;
+                    &---hero {
+                        background: black;
+                        background-size: cover;
+                        background-position: 50% 50%;
+                        border-radius: 3px;
+                        filter: grayscale(50%);
+                        &::after {
+                            content: '';
+                            width: 100%;
+                            height: 100%;
+                            // background:rgba(226,213,206,.20);
+                            position: absolute;
                         }
-                        &:last-of-type {
-                            opacity: 0;
-                        }
-
-                    }
-                }
-                &---hero {
-                    background: black;
-                    background-size: cover;
-                    background-position: 50% 50%;
-                    border-radius: 3px;
-                    filter: grayscale(50%);
-
-                    &::after {
-                        content: '';
-                        width:100%;
-                        height:100%;
-                        // background:rgba(226,213,206,.20);
-                        position:absolute;
                     }
                 }
             }
-            }
-            
         }
     }
 }
-
 
 .gallery {
     ul {
@@ -125,6 +107,3 @@ section.main {
         @include flex-wrap(wrap);
     }
 }
-
-
-
