--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -4,10 +4,10 @@
             <div class="logo">
                 <a href="index.html">The Paw Collective</a>
             </div>
-            <ul>
-                <li><a href="#">Animals</a></li>
-                <li><a href="#">Interviews</a></li>
-                <li><a href="#">About</a></li>
+            <ul class="main_navigation">
+                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/')}"><a href="#">Animals</a></li>
+                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/interviews')}"><a href="#">Interviews</a></li>
+                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/about')}"><a href="#">About</a></li>
             </ul>
         </nav>
     </div>
