--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,8 +1,12 @@
 // ////= Main Composition Styling
 // //=============================================================
+
 $map-portifolio: ( gutters: 0.1);
-section.main {
+
+.collective {
+
     .container {
+
         .main_title {
             color: #313131;
             font-weight: lighter;
@@ -12,13 +16,17 @@ section.main {
             text-align: center;
             text-transform: uppercase;
         }
+
+        // The Gallery
         .gallery_home {
             @include full;
+
             ul {
                 @include clearfix;
                 list-style: none;
                 padding: 0;
             }
+
             @include with-layout($map-portifolio) {
                 &--items {
                     height: auto;
@@ -26,14 +34,17 @@ section.main {
                     margin-bottom: gutter(susy-get(columns));
                     position: relative;
                     height: 267px;
+
                     @include gallery(1 of 5);
+
                     @include breakpoint(md) {
                         @include gallery(4 of 12);
                     }
+
                     @include breakpoint(sm) {
-                        @include gallery(12 of 12);
-                        float: none;
+                        @include gallery(1 of 2);
                     }
+
                     &:hover {
                         > div:first-child {
                             opacity: 1;
@@ -50,12 +61,14 @@ section.main {
                             }
                         }
                     }
+
                     &---overlay,
-                    &---hero {
+                    &---image {
                         position: absolute;
                         width: 100%;
                         height: 100%;
                     }
+
                     &---overlay {
                         z-index: 2;
                         background: rgba(0, 0, 0, 0.43);
@@ -81,7 +94,8 @@ section.main {
                             }
                         }
                     }
-                    &---hero {
+
+                    &---image {
                         background: black;
                         background-size: cover;
                         background-position: 50% 50%;
