Restructure app folders + add Interviews page

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,12 +2,12 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="index.html">The Paw Collective</a>
+                <a href="/">The Paw Collective</a>
             </div>
             <ul class="main_navigation">
-                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/')}"><a href="#">Animals</a></li>
-                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/interviews')}"><a href="#">Interviews</a></li>
-                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/about')}"><a href="#">About</a></li>
+                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/')}"><a href="/">Animals</a></li>
+                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/interviews')}"><a href="/interviews">Interviews</a></li>
+                <li class="main_navigation--items" ng-class="{ active: nav.isActive('/about')}"><a href="/about">About</a></li>
             </ul>
         </nav>
     </div>
