Header scroll animation effect

--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -1,4 +1,5 @@
 // ADMIN
+// 
 .nav {
     background: $navbar-admin-color;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.098), 0px 1px 5px 0px rgba(0, 0, 0, 0.084);
@@ -7,6 +8,7 @@
     top: 0;
     width: 100%;
     z-index: 100;
+
     > .container {
         height: 100%;
         position: relative;
@@ -104,10 +106,18 @@
     }
 }
 
+
 // MAIN
+
 .main {
 
-    padding: 30px 0;
+    padding: 20px 0;
+    position: fixed;
+    z-index: 10;
+    right: 0;
+    left: 0;
+    top: 0;
+    background:white;
 
     nav {
         @include display(flex);
