--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<header class="main">
+<header headroom  tolerance='5' offset='250' classes="{pinned:'slideDown',unpinned:'slideUp',initial:'animated'}" class="main">
     <div class="container">
         <nav>
             <div class="logo">
