--- a/client/app/scss/base/_core.scss
+++ b/client/app/scss/base/_core.scss
@@ -20,6 +20,10 @@ a {
     color: inherit;
 }
 
+main {
+    padding-top:70px;
+}
+
 select {
     border-bottom: 1px solid #e1e1e1;
     width: 100%;
