Add sidebar info

--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -26,6 +26,7 @@
 @import 'modules/shared';
 @import 'modules/drop-image-box';
 @import 'modules/filter-box';
+@import 'modules/side-infos';
 
 // Pages
 @import 'pages/home-page';
