--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -1,61 +1,69 @@
-input.ac-button, .ac-button {
+input.ac-button,
+.ac-button {
     background: #4D5CF9;
     border-radius: 1px;
     color: white;
     font-size: 0.8em;
     letter-spacing: 0.1em;
     padding: 12px 15px;
-    text-transform:uppercase;
-
-    box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    text-transform: uppercase;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     @include transition(all 0.2s ease-in-out);
-
     &:hover {
-    	box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     }
-
     &:disabled {
-        opacity:0.3;
+        opacity: 0.3;
     }
-
     &.login {
-        width:100%;
-        height:auto;
+        width: 100%;
+        height: auto;
     }
 }
 
 .ac-label {
-
-	font-size:1em;
-
-	.search {
-
-	}
-
-	&.default {
-		display:block;
-		padding: 13px 5px;
+    font-size: 1em;
+    .search {}
+    &.default {
+        display: block;
+        padding: 13px 5px;
         border-bottom: 1px solid #e1e1e1;
-        margin:10px 0;
+        margin: 10px 0;
         font-size: 0.9em;
-        font-family:$font-stack-mark;
+        font-family: $font-stack-mark;
         letter-spacing: 0.07em;
-        width:100%;
-	}
+        width: 100%;
+    }
 }
 
 ::-webkit-input-placeholder {
-   color: #585355;
+    color: #585355;
 }
 
-:-moz-placeholder { /* Firefox 18- */
-   color: #585355;  
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: #585355;
 }
 
-::-moz-placeholder {  /* Firefox 19+ */
-   color: #585355;  
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #585355;
 }
 
-:-ms-input-placeholder {  
-   color: #585355;  
+:-ms-input-placeholder {
+    color: #585355;
+}
+
+.seperator {
+    border-bottom: 1px solid #dcdcdc;
+    padding: 30px 0;
+    width: 100%;
+}
+
+.subtitle_box {
+    text-align: center;
+    padding: 50px 0;
+    font-size: 1.05em;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
 }
