--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,12 +1,8 @@
 // ////= Main Composition Styling
 // //=============================================================
-
 $map-portifolio: ( gutters: 0.1);
-
 .collective {
-
     .container {
-
         .main_title {
             color: #313131;
             font-weight: lighter;
@@ -16,17 +12,14 @@ $map-portifolio: ( gutters: 0.1);
             text-align: center;
             text-transform: uppercase;
         }
-
         // The Gallery
         .gallery_home {
             @include full;
-
             ul {
                 @include clearfix;
                 list-style: none;
                 padding: 0;
             }
-
             @include with-layout($map-portifolio) {
                 &--items {
                     height: auto;
@@ -34,17 +27,13 @@ $map-portifolio: ( gutters: 0.1);
                     margin-bottom: gutter(susy-get(columns));
                     position: relative;
                     height: 267px;
-
                     @include gallery(1 of 5);
-
                     @include breakpoint(md) {
                         @include gallery(4 of 12);
                     }
-
                     @include breakpoint(sm) {
                         @include gallery(1 of 2);
                     }
-
                     &:hover {
                         > div:first-child {
                             opacity: 1;
@@ -61,14 +50,12 @@ $map-portifolio: ( gutters: 0.1);
                             }
                         }
                     }
-
                     &---overlay,
                     &---image {
                         position: absolute;
                         width: 100%;
                         height: 100%;
                     }
-
                     &---overlay {
                         z-index: 2;
                         background: rgba(0, 0, 0, 0.43);
@@ -94,7 +81,6 @@ $map-portifolio: ( gutters: 0.1);
                             }
                         }
                     }
-
                     &---image {
                         background: black;
                         background-size: cover;
@@ -118,5 +104,49 @@ $map-portifolio: ( gutters: 0.1);
     ul {
         @include display(flex);
         @include flex-wrap(wrap);
+    }
+}
+
+.featured_interviews {
+
+    height: auto;
+    overflow: hidden;
+
+    &__items {
+
+        @include span(6 of 12);
+        &:last-of-type {
+            @include last;
+        }
+
+        &--banner {
+            height: 258px;
+            background: red;
+            background-size:cover;
+            background-position:50% 50%;
+        }
+
+        &--article {
+            h1 {
+                padding: 30px 0;
+                font-size: 1.5em;
+                font-weight: 600;
+                letter-spacing: 0.07em;
+            }
+            p {
+                line-height: 1.7em;
+                font-weight:lighter;
+                padding-right:30px;
+                font-size:0.9em;
+            }
+        }
+
+        // Responsive Breakpoints
+        @include breakpoint(md) {
+            @include span(12 of 12);
+            &:last-of-type {
+                
+            }
+        }
     }
 }
