Add case-insensitive query search and restructure folders

--- a/client/app/scss/modules/_shared.scss
+++ b/client/app/scss/modules/_shared.scss
@@ -58,6 +58,11 @@ input.ac-button,
     border-bottom: 1px solid #dcdcdc;
     padding: 30px 0;
     width: 100%;
+
+    // Responsive Breakpoint
+    @include breakpoint(md) {
+        padding:10px 0;
+    }
 }
 
 .subtitle_box {
@@ -66,4 +71,9 @@ input.ac-button,
     font-size: 1.05em;
     text-transform: uppercase;
     letter-spacing: 0.06em;
+
+    // Responsive Breakpoint
+    @include breakpoint(md) {
+        padding:30px 0;
+    }
 }
