--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -34,8 +34,9 @@
 @import 'pages/create-edit';
 @import 'pages/admin-animal';
 @import 'pages/admin-dashboard';
-@import 'pages/interview-dashboard';
-@import 'pages/interview';
+@import 'pages/admin-interviews-dashboard';
+@import 'pages/admin-interviews';
 @import 'pages/login';
 @import 'pages/signup';
 @import 'pages/main';
+@import 'pages/interview';
