--- a/client/app/scss/modules/_side-infos.scss
+++ b/client/app/scss/modules/_side-infos.scss
@@ -11,7 +11,7 @@
     &__left {
         @include transform(rotate(-90deg));
         text-transform: uppercase;
-        color: #d1d1d1;
+        color: #a7a7a7;
         letter-spacing:0.2em;
         -webkit-transform-style: preserve-3d;
         -webkit-backface-visibility: hidden;
