--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <a href="/">The Paw Collective</a>
+                <a href="/">T.P.C</a>
             </div>
             <ul class="main_navigation">
                 <li class="main_navigation--items" ng-class="{ active: nav.isActive('/')}"><a href="/">Animals</a></li>
