--- a/client/app/scss/base/_core.scss
+++ b/client/app/scss/base/_core.scss
@@ -2,7 +2,7 @@
 // 
 body {
     font-family: $font-stack-mark;
-    background: white;
+    background: #FAFAF3;
     -webkit-backface-visibility: hidden;
 
 }
