--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -1,5 +1,6 @@
 // ////= Main Composition Styling
 // //=============================================================
+
 $map-portifolio: ( gutters: 0.1);
 .collective {
     .container {
@@ -34,22 +35,36 @@ $map-portifolio: ( gutters: 0.1);
                     @include breakpoint(sm) {
                         @include gallery(1 of 2);
                     }
+
                     &:hover {
-                        > div:first-child {
-                            opacity: 1;
-                            @include transition(opacity 0.1s ease-in);
-                            p {
-                                &:first-of-type {
-                                    @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp);
-                                    @include animation-delay(0.2s)
+                        > div {
+
+                            &:first-child {
+                                opacity: 1;
+                                
+                                @include transition(opacity 0.1s ease-in);
+                                
+                                p {
+                                    &:first-of-type {
+                                        @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleUp);
+                                        @include animation-delay(0.2s)
+                                    }
+                                    &:last-of-type {
+                                        @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown);
+                                        @include animation-delay(0.2s)
+                                    }
                                 }
-                                &:last-of-type {
-                                    @include animation(cubic-bezier(0.2, 0.3, 0.25, 0.9) 1.2s normal forwards 1 titleDown);
-                                    @include animation-delay(0.2s)
+                            }
+
+                            &:last-child {
+                                > div {
+                                    @include transform(scale(1.05));
+                                    @include transition(transform 1.05s ease-in-out);
                                 }
                             }
                         }
                     }
+
                     &---overlay,
                     &---image {
                         position: absolute;
@@ -81,17 +96,20 @@ $map-portifolio: ( gutters: 0.1);
                             }
                         }
                     }
-                    &---image {
-                        background: black;
-                        background-size: cover;
-                        background-position: 50% 50%;
-                        filter: grayscale(50%);
-                        &::after {
-                            content: '';
-                            width: 100%;
-                            height: 100%;
-                            // background:rgba(226,213,206,.20);
-                            position: absolute;
+
+                    &__wrap {
+                        height: 100%;
+                        overflow:hidden;
+
+                        &---image {
+                            background: black;
+                            background-size: cover;
+                            background-position: 50% 50%;
+                            filter: grayscale(50%);
+                            height:100%;
+                            width:100%;    
+                            @include transition(transform 1.05s ease-in-out);
+ 
                         }
                     }
                 }
@@ -119,14 +137,37 @@ $map-portifolio: ( gutters: 0.1);
             @include last;
         }
 
-        &--banner {
-            height: 258px;
-            background: red;
-            background-size:cover;
-            background-position:50% 50%;
+        &__wrap {
+            height:258px;
+            overflow:hidden;
+
+            &--banner {
+                background: red;
+                background-size:cover;
+                background-position:50% 50%;
+                height:100%;
+                width:100%;
+
+                @include transition(transform 1.05s ease-in-out);
+
+                &:hover {
+                    @include transform(scale(1.05));
+                    @include transition(transform 1.05s ease-in-out);
+                } 
+            }
         }
 
         &--article {
+            
+            background: white;
+            margin: 0 20px;
+            position: relative;
+            top: -30px;
+            padding-bottom: 40px;
+            padding-left: 30px;
+            min-height: 200px;
+            padding-right: 20px;
+
             h1 {
                 padding: 30px 0;
                 font-size: 1.5em;
