--- a/client/app/scss/layout/_hero.scss
+++ b/client/app/scss/layout/_hero.scss
@@ -10,7 +10,8 @@
 
     // Responsive Breakpoints
     @include breakpoint(md){
-        height:300px;
+        height:200px;
+        padding: 20px 0;
     }
 
     &_innerbox,
@@ -35,7 +36,9 @@
             height:84%;
         }
         @include breakpoint(sm) {
-            width:80%;
+            width:60%;
+            border: 11px solid rgba(219, 220, 233, 0.22);
+            height:84%;
         }
     }
     
@@ -62,7 +65,7 @@
             }
 
             @include breakpoint(sm) {
-                font-size:1.5em;
+                font-size:1.2em;
             }
         }
         p {
@@ -73,6 +76,13 @@
             line-height: 1.9em;
             text-transform: uppercase;
             text-align:center;
+
+            // Responsive Breakpoint
+            @include breakpoint(sm) {
+                letter-spacing:0.2em;
+                line-height:1.6em;
+                font-size:0.8em;
+            }
         }
     }
 }
