--- a/client/app/scss/pages/_interview.scss
+++ b/client/app/scss/pages/_interview.scss
@@ -2,8 +2,14 @@
 
 	padding:90px 0;
 
+	// Responsive Breakpoint
+	@include breakpoint(sm) {
+		padding:30px 0;
+	}
+
 	&_owner {
 		@include span(3 of 12);
+
 		img {
 			width:90%;
 		}
@@ -13,9 +19,15 @@
 
 		&--title {
 			font-size: 3em;
-			letter-spacing:0.04em;
+			letter-spacing:0.01em;
 			padding: 0 0 20px 0;
 			font-weight:600;
+			line-height:1.3em;
+			// Responsive Breakpoint
+			@include breakpoint(sm) {
+				font-size:2em;
+				padding: 15px 0;
+			}
 		}
 		&--date {
 			padding-bottom: 30px;
@@ -25,6 +37,10 @@
 		&--excerpt {
 			font-size: 0.9em;
 			line-height: 1.7em;
+			// Responsive Breakpoint
+			@include breakpoint(sm) {
+				font-size:1.2em;
+			}
 		}
 
 		// question & answers
@@ -32,6 +48,7 @@
 			padding: 15px 50px 15px 0px;
 
 			p {
+				// Question
 				&:first-of-type {
 					color:#A5A6AD;
 					font-weight:bolder;
@@ -39,11 +56,31 @@
 					padding:15px 0;
 					line-height:1.5em;
 				}
+				// Answer
 				&:last-of-type {
 					font-size: 0.9em;
 					line-height: 1.7em;
 				}
+
+				&:first-of-type, &:last-of-type {
+					// Responsive Breakpoint
+					@include breakpoint(sm) {
+						font-size:1.2em;
+					}
+				}
 			}
+
+			// Responsive Breakpoint
+			@include breakpoint(sm) {
+				padding:15px 0px;
+			}
+		}
+	}
+
+	&_owner, &_article {
+		// Responsive Breakpoint
+		@include breakpoint(sm) {
+			@include span(12 of 12);
 		}
 	}
 }
