--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -15,12 +15,15 @@ $map-portifolio: ( gutters: 0.1);
         }
         // The Gallery
         .gallery_home {
+
             @include full;
+
             ul {
                 @include clearfix;
                 list-style: none;
                 padding: 0;
             }
+
             @include with-layout($map-portifolio) {
                 &--items {
                     height: auto;
@@ -76,16 +79,24 @@ $map-portifolio: ( gutters: 0.1);
                         background: rgba(0, 0, 0, 0.43);
                         cursor: pointer;
                         opacity: 0;
+
+                        article {
+                            padding:0 10px;
+                        }
+
                         @include transition(opacity 0.5s ease-in-out);
                         @include display(flex);
                         @include align-items(center);
                         @include justify-content(center);
                         @include flex-direction(row);
+                        
                         p {
                             display: block;
                             text-align: center;
                             padding: 3px 0;
                             color: white;
+                            word-wrap: break-word;
+
                             &:first-of-type {
                                 font-size: 1.2em;
                                 font-weight: bolder;
@@ -94,6 +105,17 @@ $map-portifolio: ( gutters: 0.1);
                             &:last-of-type {
                                 opacity: 0;
                             }
+                        }
+
+                        // Responsive Breakpoint
+                        @include breakpoint(sm) {
+                            opacity:1;
+                            p {
+                              &:first-of-type, &:last-of-type {
+                                opacity:1;
+                                }  
+                            }
+                            
                         }
                     }
 
@@ -173,12 +195,25 @@ $map-portifolio: ( gutters: 0.1);
                 font-size: 1.5em;
                 font-weight: 600;
                 letter-spacing: 0.07em;
+                // Responsive Breakpoint
+                @include breakpoint(sm) {
+                    padding:20px 0;
+                }
             }
             p {
                 line-height: 1.7em;
                 font-weight:lighter;
                 padding-right:30px;
                 font-size:0.9em;
+                // Responsive Breakpoint
+                @include breakpoint(sm) {
+                    padding-right:0;
+                }
+            }
+
+            // Responsive Breakpoint
+            @include breakpoint(sm) {
+                margin: 0 10px;
             }
         }
 
@@ -186,6 +221,9 @@ $map-portifolio: ( gutters: 0.1);
         @include breakpoint(md) {
             @include span(12 of 12);
             padding-bottom:30px;
+        }
+        @include breakpoint(sm) {
+            padding-bottom:0;
         }
     }
 }
