--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,10 @@
-<div class="container">
-  <p>Angular Fullstack v3.5.0 |
-    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
-  </p>
+<div class="footer_main__wrapper">
+    <div class="container">
+        <ul class="footer_main__links">
+            <li class="main_navigation--items" ng-class="{ active: nav.isActive('/')}"><a href="/">Animals</a></li>
+            <li class="main_navigation--items" ng-class="{ active: nav.isActive('/interviews')}"><a href="/interviews">Interviews</a></li>
+            <li class="main_navigation--items" ng-class="{ active: nav.isActive('/about')}"><a href="/about">About</a></li>
+        </ul>
+        <p class="footer_main__copyright">2016 © All rights reserved</p>
+    </div>
 </div>
