--- a/client/app/scss/layout/_footer-root.scss
+++ b/client/app/scss/layout/_footer-root.scss
@@ -3,7 +3,35 @@
 ////= Content Info Styling
 //======================================================================//
 
-.footer,
-.root {
-  //
+footer.admin {
+	padding:30px 0;
+}
+
+
+.footer_main {
+    &__wrapper {
+        text-align: center;
+        padding: 80px 0;
+        background: white;
+        margin-top:30px;
+        // Responsive Breakpoint
+        @include breakpoint(sm) {
+        	padding:20px 0;
+        }
+    }
+    &__links {
+        li {
+            padding-left: 0px;
+            padding: 0 10px;
+        }
+    }
+    &__copyright {
+        padding-top: 50px;
+        font-size: 0.9em;
+        color: rgb(162, 162, 162);
+        // Responsive Breakpoint
+        @include breakpoint(sm) {
+        	padding-top:20px;
+        }
+    }
 }
