--- a/client/app/scss/pages/_interview.scss
+++ b/client/app/scss/pages/_interview.scss
@@ -1,21 +1,38 @@
 .interview_main {
 
-	padding:90px 0;
+	padding:40px 0;
 
 	// Responsive Breakpoint
 	@include breakpoint(sm) {
 		padding:30px 0;
 	}
 
-	&_owner {
-		@include span(3 of 12);
+	&_hero {
+		height: 600px;
+		background: black;
+		background-size:cover;
+		background-position:50% 50%;
 
-		img {
-			width:90%;
+		// Responsive Breakpoint
+		@include breakpoint(sm) {
+			height:300px;
 		}
 	}
+
 	&_article {
-		@include span(6 of 12);
+
+		width: 60%;
+		margin: 0 auto;
+		padding:30px 0;
+
+		// Responsive Breakpoint
+		@include breakpoint(sm) {
+			width:100%;
+		}
+
+		&--title, &--date, &--excerpt {
+			text-align:center;
+		}
 
 		&--title {
 			font-size: 3em;
@@ -43,16 +60,20 @@
 			}
 		}
 
+		&--owner {
+			text-align: center;
+			padding: 40px 0;
+		}
+
 		// question & answers
 		&__qa {
-			padding: 15px 50px 15px 0px;
+			padding: 15px 0;
 
 			p {
 				// Question
 				&:first-of-type {
-					color:#A5A6AD;
+					color:#0a0a0b;
 					font-weight:bolder;
-					text-transform:uppercase;
 					padding:15px 0;
 					line-height:1.5em;
 				}
@@ -74,13 +95,6 @@
 			@include breakpoint(sm) {
 				padding:15px 0px;
 			}
-		}
-	}
-
-	&_owner, &_article {
-		// Responsive Breakpoint
-		@include breakpoint(sm) {
-			@include span(12 of 12);
 		}
 	}
 }
