--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -164,7 +164,7 @@ $map-portifolio: ( gutters: 0.1);
             overflow:hidden;
 
             &--banner {
-                background: red;
+                background: RGB(145, 147, 159);
                 background-size:cover;
                 background-position:50% 50%;
                 height:100%;
@@ -200,7 +200,8 @@ $map-portifolio: ( gutters: 0.1);
                     padding:20px 0;
                 }
             }
-            p {
+
+            &---excerpt {
                 line-height: 1.7em;
                 font-weight:lighter;
                 padding-right:30px;
@@ -209,6 +210,13 @@ $map-portifolio: ( gutters: 0.1);
                 @include breakpoint(sm) {
                     padding-right:0;
                 }
+            }
+
+            &---readmore {
+                text-transform:uppercase;
+                padding-top:20px;
+                font-size: 0.8em;
+                font-weight: bolder;
             }
 
             // Responsive Breakpoint
