--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -5,6 +5,6 @@
             <li class="main_navigation--items" ng-class="{ active: nav.isActive('/interviews')}"><a href="/interviews">Interviews</a></li>
             <li class="main_navigation--items" ng-class="{ active: nav.isActive('/about')}"><a href="/about">About</a></li>
         </ul>
-        <p class="footer_main__copyright">2016 © All rights reserved</p>
+        <p class="footer_main__copyright">2016 © All Rights Reserved</p>
     </div>
 </div>
