--- a/client/app/scss/pages/_interview.scss
+++ b/client/app/scss/pages/_interview.scss
@@ -37,7 +37,7 @@
 		&--title {
 			font-size: 3em;
 			letter-spacing:0.01em;
-			padding: 0 0 20px 0;
+			padding: 10px 0 20px 0;
 			font-weight:600;
 			line-height:1.3em;
 			// Responsive Breakpoint
@@ -47,12 +47,12 @@
 			}
 		}
 		&--date {
-			padding-bottom: 30px;
+			padding: 30px 0 0px 0;
 			font-size: 0.9em;
-			color: rgb(138, 138, 138);
+			color: black;
 		}
 		&--excerpt {
-			font-size: 1.3em;
+			font-size: 1em;
 			line-height: 1.7em;
 			// Responsive Breakpoint
 			@include breakpoint(sm) {
