--- a/client/app/scss/pages/_main.scss
+++ b/client/app/scss/pages/_main.scss
@@ -192,7 +192,7 @@ $map-portifolio: ( gutters: 0.1);
             top: -30px;
             padding-bottom: 40px;
             padding-left: 30px;
-            min-height: 200px;
+            min-height: 230px;
             padding-right: 20px;
 
             h1 {
@@ -222,6 +222,8 @@ $map-portifolio: ( gutters: 0.1);
                 padding-top:20px;
                 font-size: 0.8em;
                 font-weight: bolder;
+                position: absolute;
+                bottom: 30px;
             }
 
             // Responsive Breakpoint
