Side menu component

--- a/client/app/scss/package.scss
+++ b/client/app/scss/package.scss
@@ -28,6 +28,7 @@
 @import 'modules/drop-image-box';
 @import 'modules/filter-box';
 @import 'modules/side-infos';
+@import 'modules/menu';
 
 // Pages
 @import 'pages/home-page';
