--- a/client/app/scss/layout/_hero.scss
+++ b/client/app/scss/layout/_hero.scss
@@ -14,6 +14,10 @@
         padding: 20px 0;
     }
 
+    @include breakpoint(sm) {
+        height:300px;
+    }
+
     &_innerbox,
     &_title {
         position: absolute;
@@ -36,9 +40,9 @@
             height:92%;
         }
         @include breakpoint(sm) {
-            width:60%;
+            width:70%;
             border: 11px solid rgba(219, 220, 233, 0.22);
-            height:84%;
+            height: 90%;
         }
     }
     
