Dynamic meta tag tags fo SEO setup

--- a/client/app/scss/layout/_hero.scss
+++ b/client/app/scss/layout/_hero.scss
@@ -42,7 +42,8 @@
         @include breakpoint(sm) {
             width:70%;
             border: 11px solid rgba(219, 220, 233, 0.22);
-            height: 90%;
+            height: 81%;
+            top:40px;
         }
     }
     
