--- a/client/app/scss/layout/_hero.scss
+++ b/client/app/scss/layout/_hero.scss
@@ -1,12 +1,22 @@
 
 .hero {
-    height: 480px;
+    height: 620px;
     background: black;
     background-image: url("../assets/images/hero_banner.jpg");
     background-size: cover;
-    background-position: 50% 20%;
+    background-position: 50% 50%;
     position: relative;
-    padding: 30px 0;
+    padding-top: 32px;
+
+    &::after {
+        content: "";
+        position:absolute;
+        width:100%;
+        height:100%;
+        background: rgba(0, 0, 0, 0.09);
+        margin-top:-60px;
+        z-index:1;
+    }
 
     // Responsive Breakpoints
     @include breakpoint(md){
@@ -33,6 +43,7 @@
         border: 21px solid rgba(219, 220, 233, 0.22);
         background: rgba(226, 213, 206, 0.15);
         @include box-sizing(border-box);
+        display:none;
 
         // Responsive Breakpoints
         @include breakpoint(md) {
@@ -57,12 +68,14 @@
         height: 100%;
         width:100%;
 
+        z-index:5;
+
         h1 {
-            font-size: 3.6em;
+            font-size: 3.5em;
             color: white;
             text-transform: uppercase;
             text-align: center;
-            letter-spacing: 0.3em;
+            letter-spacing: 0.2em;
 
             // Responsive Breakpoints
             @include breakpoint(md) {
