--- a/client/app/scss/layout/_nav-navigation.scss
+++ b/client/app/scss/layout/_nav-navigation.scss
@@ -116,9 +116,19 @@
     z-index: 10;
     right: 0;
     left: 0;
-    top: 0;
-    background:white;
-    border-bottom: 1px solid #d8d8d8;
+    max-width: 75%;
+    margin: 0 auto;
+    
+    &__wrapper {
+        margin-top: 0px;
+        padding: 20px 0;
+        background: white;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+    &.container {
+        @include container(90%);
+    }
 
     nav {
         @include display(flex);
